# Bundes-RAG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Claude_Code_Lessons_Learned.md  Dockerfile  Initial_specification.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js  main.js  router.js  statusSort.js
frontend/src/components/: UsageStats.vue
frontend/src/locales/: de.js  en.js
frontend/src/views/: AskView.vue  ClearView.vue  DownloadView.vue  IndexView.vue  StatusView.vue
src/bundesrag/: cli.py  config.py  i18n.py  logging_config.py  progress.py  usage.py  vectorstore.py
src/bundesrag/dip/: client.py  models.py
src/bundesrag/ingestion/: manifest.py  pdf_loader.py  pipeline.py
src/bundesrag/locales/: __init__.py  de.py  en.py
src/bundesrag/query_agent/: agent.py  prompts.py  schema.py
src/bundesrag/rag/: answer_agent.py  ask_stats.py  filters.py  retriever.py
src/bundesrag/web/: app.py  dependencies.py  jobs.py  routes_jobs.py  routes_sync.py  schemas.py
tests/: conftest.py  test_answer_agent.py  test_cli.py  test_config.py  test_dip_client.py  test_ingestion_pipeline.py  test_manifest.py  test_pdf_loader.py  test_query_agent.py  test_rag_filters.py  test_rag_retriever.py  test_usage.py  test_vectorstore.py  test_web_app.py  test_web_download.py  test_web_index.py  test_web_jobs.py  test_web_sync.py
